# fip2dmp-importer

./: .dockerignore  Dockerfile  HOWTO.md  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
src/fip2dmp_importer/: api_client.py  app.py  logic.py
src/fip2dmp_importer/static/: script.js  styles.css
src/fip2dmp_importer/templates/: index.html.j2
