[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'fip2dmp-importer'
version = '0.1.0'
description = 'FIP-to-DMP project importer for Data Stewardship Wizard'
readme = 'README.md'
keywords = ['dsw', 'fip', 'import', 'replies', 'mapping']
license = { text = 'Apache License 2.0' }
authors = [
    { name = 'Marek Suchánek', email = 'marek.suchanek@codevence.com' }
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Text Processing',
    'Topic :: Utilities',
]
requires-python = '>=3.10, <4'
dependencies = [
    'fastapi',
    'httpx',
    'Jinja2',
]

[project.urls]
Homepage = 'https://fip-wizard.ds-wizard.org'
Repository = 'https://github.com/fip-wizard/fip2dmp-importer'

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
where = ['src']

[tool.setuptools.package-data]
'*' = ['*.css', '*.js', '*.j2', '*.png']

[tool.distutils.bdist_wheel]
universal = true
